# atropos-health-interview

./: .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  pyproject.toml
atropos/: celery_app.py  db.py  main.py
atropos/api/: errors.py  task_types.py  tasks.py
atropos/api/models/: __init__.py  task.py
atropos/api/schemas/: task.py
atropos/api/schemas/task/: __init__.py  task_request.py  task_response.py
atropos/api/schemas/task_type/: __init__.py  base.py  data_processing_response.py
atropos/api/services/: base.py  create_record.py  create_task_record.py  dispatch_task.py  enqueue_task.py  get_record_by_id.py  get_task_by_id.py  get_task_types.py  handle_process_data.py  handle_task.py
atropos/tests/: conftest.py
atropos/tests/api/: test_task_types.py  test_tasks.py
atropos/tests/api/services/: test_create_record.py  test_create_task_record.py  test_enqueue_task.py  test_get_record_by_id.py  test_get_task_by_id.py  test_handle_process_data.py
atropos/tests/fakes/: task_services.py
